# aesop

./: .gitmodules  INSTALL  Make.rules  Makefile.am  Makefile.in  Makefile.subdir  README  SKIPPED_TESTS  ae-base.h  ae-blocking-parser.h  ae-ctl.c  ae-ctl.h  ae-debug.h  ae-error.h  ae-init.c  ae-init.h  ae-list.h  ae-log.h  ae-remote-parser.h  ae-thread.h  ae-types.h  aesop-config.h  aesop-config.h.in  aesop-support.hae  aesop.c  aesop.h  aesop.pc.in  configure.ac  hints.c  hints.h  module.mk.in  op.h  opcache.c  opcache.h  prepare  resource.c  resource.h
ae-blocking-parser/: .gitignore  INSTALL  Makefile.am  Makefile.in  configure.ac  prepare
ae-blocking-parser/maint/config/: ghc.m4  unix.m4
ae-blocking-parser/maint/hs/: language-c-0.4.2.patch  setup-cabal-local  setup-hs-debian  setup-hs-local
ae-blocking-parser/src/: BlockingContext.lhs  CGen.lhs  CParse.lhs  CUtils.lhs  ContextGen.lhs  Header.lhs  Makefile.subdir  README  Serialize.hs  Walker.lhs  ae-blocking-parser.lhs  ae-test.lhs
aecc/: INSTALL  Makefile.in  configure.ac  module.mk.in
aecc/include/: ae-blocking-parser.h
aecc/maint/: aecc.pc.in
aecc/src/: BlockingContext.lhs  CParse.lhs  ContextGen.lhs  Walker.lhs  module.mk.in
aefile/: aefile.ae  module.mk.in
aefile/test/: aefile-example.ae  module.mk.in
doc/: README  aesop-pbranch-cancel.txt  aesop-performance.txt  aesop-user-guide.txt  aesop.txt  aug_external.txt  aug_introduction.txt  aug_language.txt  aug_preface.txt  aug_standard.txt  module.mk.in
doc/old/: aesop.txt
examples/: TODO  module.mk.in  rpc-invoke.ae
include/aesop/std/: cond.hae
maint/: aesop.pc.in  depend-ae.sh  depend-hae.sh  depend-hae.sh.in  depend.sh  handle-ditaa.py
maint/config/: bdb.m4
maint/hs/: .gitignore  README.txt  language-c-0.4.2.patch  language-c.patch  setup-aesop  setup-cabal-local  setup-hs-local  setup-langc
maint/jenkins/: build.sh  install-libev.sh  install-openpa.sh  prepare_environment.sh  prepare_haskell_deps.sh
parser/: BlockingContext.lhs  CGen.lhs  CParse.lhs  CUtils.lhs  ContextGen.lhs  Header.lhs  Serialize.hs  Walker.lhs  ae-blocking-parser.lhs  ae-remote-parser.lhs  module.mk.in
parser/tests/blocking/: TODO  afterwhile.ae  basic-struct-init.ae  basic-struct-return.ae  basic.ae  btest-impl.c  btest.hae  cancel-pbranch-loop.ae  cancel-pbranch1.ae  cancel-pbranch2.ae  cancel-pbranch3.ae  cancel-pbranch4.ae  icpfor.ae  (+56 more)
resources/file/: aefile.ae  aefile.hae  module.mk.in
resources/resourcebuilder/: README  module.mk.in  resourcebuilder.c  resourcebuilder.hae
resources/sem/: cond.c  cond.hae  module.mk.in  sem.c  sem.hae
resources/thread/: aethread.c  aethread.hae  module.mk.in
resources/timer/: module.mk.in  timer.c  timer.hae
resources/worker/: module.mk.in  worker.c  worker.h
runtime/: ae-ctl.c  ae-error.h  configure.ac
runtime/maint/: depend-ae.sh.in  depend.sh.in
src/: Makefile.subdir
src/aebdb/: aebdb.ae  aebdb.hae  module.mk.in
src/aefile/: aefile.ae  aefile.hae  module.mk.in
src/aekinetic/: aekinetic.ae  aekinetic.hae  module.mk.in
src/compiler/: Makefile.subdir
src/resourcebuilder/: module.mk.in  resourcebuilder.ae  resourcebuilder.hae
src/runtime/: Makefile.subdir
src/socket/: aesocket.ae  aesocket.hae  module.mk.in
src/ssm/: aessm.ae  aessm.hae  module.mk.in
src/std/: Makefile.subdir
src/timer/: module.mk.in  timer.ae
tests/: blocking-overhead.ae  module.mk.in  resource-register.c  test-hints.ae  test-trace.ae  testrunner.sh.in
toolchain/: .gitignore  INSTALL  Make.rules  Makefile.am  Makefile.in  configure.ac  module.mk.in  prepare
toolchain/doc/: Makefile  aesop-install.txt
toolchain/include/: resource.h
toolchain/include/aesop/: Makefile.subdir  ae-debug.h  aebdb.hae  aekinetic.hae  op.h  resourcebuilder.hae  sem.hae
toolchain/maint/: aesop.pc.in  depend-ae.sh  depend-ae.sh.in  depend-hae.sh.in  handle-ditaa.py
toolchain/maint/config/: bdb.m4  unix.m4
toolchain/maint/hs/: setup-aesop  setup-hs-local
toolchain/maint/jenkins/: prepare_environment.sh
toolchain/src/: Makefile.subdir  ae-ctl.c  aesop.c  hints.c  module.mk.in  resource.c
toolchain/src/aebdb/: Makefile.subdir  aebdb.ae
toolchain/src/aebdb/test/: module.mk.in
toolchain/src/aefile/: aefile.ae
toolchain/src/aefile/test/: module.mk.in
toolchain/src/components/: Makefile.subdir  aebdb.ae  aefile.ae  aekinetic.ae  aesocket.ae  resourcebuilder.ae  timer.ae
toolchain/src/resources/: Makefile.subdir  aethread.c  cond.c  sem.c  worker.c
toolchain/src/resources/sem/: cond.c  module.mk.in  sem.c
toolchain/src/resources/sem/test/: cancel-sem-before-down.ae
toolchain/src/resources/thread/: aethread.c  aethread.hae  module.mk.in
toolchain/src/resources/thread/test/: aethread-example.ae
toolchain/src/resources/worker/: module.mk.in
toolchain/src/socket/test/: module.mk.in
toolchain/tests/: Makefile.subdir  blocking-overhead.ae  resource-register.c  timer1.ae
toolchain/tests/blocking/: README  cancel-pbranch2.ae  cancel-pbranch4.ae  compound.ae  dowhileloop.ae  parallel1.ae  parallel3.ae  parallelfor.ae  whilebreak2.ae  whilebreak3.ae
toolchain/tests/components/: Makefile.subdir  rb-cancel.ae  rb-simple.ae
toolchain/tests/parser/: Makefile.subdir  afterwhile.ae  basic-struct-init.ae  basic-struct-return.ae  basic.ae  btest-impl.c  btest.hae  cancel-pbranch-loop.ae  cancel-pbranch1.ae  cancel-pbranch2.ae  cancel-pbranch3.ae  cancel-pbranch4.ae  compound.ae  consecutive-resource-completions.ae  dowhileloop.ae  empty-blocking.ae  forloop.ae  forloop2.ae  forloop3.ae  funptr-on-stack.ae  funptrs.ae  funptrs2.ae  icpfor.ae  if.ae  ifnbelse.ae  ifnoelse.ae  ifnoelse2.ae  local-var-def.ae  local-var-forloop.ae  lonely-pbranch-variable-scope.ae  lonely-pbranch.ae  lonely-pbranch2.ae  lonely-pbranch3.ae  lonely-pbranch3.sh  lonely-pbranch4.ae  minimal.ae  mixed.ae  multif.ae  nbfun.ae  nested-forloop.ae  (+35 more)
toolchain/tests/resources/: Makefile.subdir  aethread-cancel.ae  cancel-sem-before-down.ae  cancel-sem-forloop.ae  cancel-sem.ae  cond-cancel.ae  cond-pthread-compare.ae  repeat-sem.ae  simple-sem.ae  worker.ae
(+77 files in other folders)
